Wed Apr 30 08:37:29 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/Parser.pm:

          Search the current directory for include files first instead of
          last.

        * bin/MakeProjectCreator/modules/ProjectCreator.pm:

          Convert project name spaces to underscores.

        * bin/MakeProjectCreator/modules/WorkspaceCreator.pm:

          Fixed a bug in generated workspace naming.  Also, added build
          ordering verification.  To enable invalid ordering warnings set
          the MPC_VERBOSE_ORDERING environment variable.

Wed Apr 30 07:40:51 2003  Chad Elliott  <elliott_c@ociweb.com>

        * apps/gperf/src/Hash_Table.cpp:
        * apps/gperf/src/Key_List.cpp:

          Remove build warnings on Windows XP 64-bit.

Tue Apr 29 18:40:28 2003  Steve Huston  <shuston@riverace.com>

        Picked up the following from Riverace's 5.3 tree:

        Sat Apr 19 19:12:39 2003  Steve Huston  <shuston@riverace.com>

        * ace/config-WinCE.h: Define ACE_DEFAULT_BASE_ADDR to 0 always;
          WinCE can't do fixed address memory mapped file. Also added
          ACE_HAS_TSS_EMULATION; WinCE is very restrictive with TLS keys.

        * ace/config-win32-common.h: Only set ACE_DEFAULT_BASE_ADDR if it
          hasn't been set prior. Allows the CE definition to hold, and also
          allows a user to set a particular value.

        * ace/Configuration.cpp: When native Win32 calls are used and return
          an error, set errno to the error status value so the logging %p
          stuff works correctly.

        * ace/Log_Msg.cpp (log): For %p, don't try strerror() for WinCE. It
          doesn't have this concept, so run everything through FormatMessage.

        * tests/Config_Test.cpp: Be sure that no keys are left open before
          attempting to delete the referred-to sections later. Deleting
          while a key is still open to the being-deleted section fails on CE.
